Issue number:  1123 Obtained from: Submitted by:  rratta Reviewed by:   rratta Issue 1123 - Checkboxes are badly aligned with text in a property sheet
Add selector to match Disabled CbSpn in property similar to
enabled CbSpn in property

div.ConTblCl2Div@THEME_CSS@ .CbSpn@THEME_CSS@ input[type=checkbox],
div.ConTblCl2Div@THEME_CSS@ .CbSpnDis@THEME_CSS@ input[type=checkbox] {
	 margin-top:-8px;
}

svn path=/trunk/; revision=1380


Former-commit-id: 45f47744866175e4818d8593438f8d92851e7896

--- a/themes/src/suntheme/css/layout.css
+++ b/themes/src/suntheme/css/layout.css
@@ -605,7 +605,8 @@ span.DrpDn@THEME_CSS@ {
 div.ConTblCl2Div@THEME_CSS@ input, div.ConTblCl2Div@THEME_CSS@ select {
 	vertical-align:middle;
 } 
-div.ConTblCl2Div@THEME_CSS@ .CbSpn@THEME_CSS@ input[type=checkbox] {
+div.ConTblCl2Div@THEME_CSS@ .CbSpn@THEME_CSS@ input[type=checkbox],
+div.ConTblCl2Div@THEME_CSS@ .CbSpnDis@THEME_CSS@ input[type=checkbox] {
 	 margin-top:-8px;
 }
 .ConFldSetLgdDiv@THEME_CSS@ {
